--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -4,28 +4,37 @@
 
 {% block body %}
     <div class="container">
-<div class="form-signin w-75 m-auto">
-  <form method="POST" action="{{ url_for('admin_login') }}">
-{#    <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">#}
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <div class="form-signin w-75 m-auto">
+            <form method="POST" action="{{ url_for('admin_login') }}">
+                <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-    <div class="form-floating">
-      <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com" data-ddg-inputtype="credentials.username">
-      <label for="floatingInput">Email address</label>
-    </div>
-    <div class="form-floating">
-      <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password" data-ddg-inputtype="credentials.password.current">
-      <label for="floatingPassword">Password</label>
-    </div>
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                  {% if messages %}
+                    <div class="alert alert-dismissible fade show" role="alert">
+                      {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}">{{ message }}</div>
+                      {% endfor %}
+                    </div>
+                  {% endif %}
+                {% endwith %}
 
-    <div class="form-check text-start my-3">
-      <input class="form-check-input" type="checkbox" value="remember-me" id="checkDefault">
-      <label class="form-check-label" for="checkDefault">
-        Remember me
-      </label>
-    </div>
-    <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-  </form>
-</div>
+                <div class="form-floating">
+                    <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com" data-ddg-inputtype="credentials.username">
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating">
+                    <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password" data-ddg-inputtype="credentials.password.current">
+                    <label for="floatingPassword">Password</label>
+                </div>
+
+                <div class="form-check text-start my-3">
+                    <input class="form-check-input" type="checkbox" value="remember-me" id="checkDefault">
+                    <label class="form-check-label" for="checkDefault">
+                        Remember me
+                    </label>
+                </div>
+                <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+            </form>
+        </div>
     </div>
 {% endblock %}
