--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,15 @@
 {% block body %}
     <div class="container">
       <h1 class="heading">Upload File</h1>
-
+              {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          <div class="alert alert-dismissible fade show" role="alert">
+            {% for category, message in messages %}
+              <div class="alert alert-{{ category }}">{{ message }}</div>
+            {% endfor %}
+          </div>
+        {% endif %}
+      {% endwith %}
       <form method="POST" enctype="multipart/form-data" class="p-4 border rounded bg-light">
     {{ form.hidden_tag() }}
 
